<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="P3_06_SP_CreateReport" Id="{e6bbc061-0a74-418f-81d3-dc946139c38f}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P3_06_SP_CreateReport
VAR
	iStep					:INT;
	iError					:INT;
	tonResetError			:TON;
	trigStart				:R_TRIG;
	tonDelayStart			:TON;
	tonDelayDelete			:TON;
	
	fbReport				:FB_PythonScript;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[ACT_CMDs();
trigStart(CLK:=GV.bSP_BatchClose);
IF tonResetError.Q THEN
	iError:=0;
END_IF

tonDelayStart(IN:=(iStep=10),PT:=T#1S);
tonDelayDelete(IN:=(iStep=999),PT:=T#1S);
CASE iStep OF
	
	0:
		IF trigStart.Q AND GV.stSP_Batch.sBatchName <> GV.sEmptyString AND NOT MAIn.bFirstCycle THEN
			iError:=0;
			iStep:=10;
		END_IF
		
	10:
		IF tonDelayStart.Q THEN
			iStep:=100;
		END_IF
		
	100:
		GV.stReport.bCreate_SPReport:=TRUE;
		IF fbReport.q_bBusy THEN
			iStep:=110;
		END_IF
	110:
		IF NOT fbReport.q_bBusy AND fbReport.q_bDone THEN
			iStep:=999;
		ELSIF fbReport.q_bError THEN
			iError:=iStep;
			iStep:=999;
		END_IF
	999:
		GV.stReport.bDelete_SPData:=TRUE;
		IF tonDelayDelete.Q THEN
			GV.stReport.bDelete_SPData:=FALSE;
			iStep:=0;
		END_IF
END_CASE]]></ST>
    </Implementation>
    <Action Name="ACT_CMDs" Id="{45f870b8-da65-420f-a80d-7fe505c7137f}">
      <Implementation>
        <NWL>
          <XmlArchive>
            <Data>
              <o xml:space="preserve" t="NWLImplementationObject">
                <v n="NetworkListComment">""</v>
                <v n="DefaultViewMode">"Fbd"</v>
                <l2 n="NetworkList" cet="Network">
                  <o>
                    <v n="ILActive">false</v>
                    <v n="FBDValid">false</v>
                    <v n="ILValid">false</v>
                    <l2 n="ILLines" />
                    <v n="Comment">""</v>
                    <v n="Title">""</v>
                    <v n="Label">""</v>
                    <v n="OutCommented">false</v>
                    <l2 n="NetworkItems" cet="BoxTreeBox">
                      <o>
                        <v n="BoxType">"FB_PythonScript"</v>
                        <o n="Instance" t="Operand">
                          <v n="Operand">"fbReport"</v>
                          <v n="Type">"FB_PythonScript"</v>
                          <v n="Comment">""</v>
                          <v n="SymbolComment">""</v>
                          <v n="Address">""</v>
                          <o n="Flags" t="Flags">
                            <v n="Flags">0</v>
                            <v n="Fixed">false</v>
                            <v n="Extensible">false</v>
                          </o>
                          <v n="LValue">false</v>
                          <v n="Boolean">false</v>
                          <v n="IsInstance">true</v>
                          <v n="Id">3L</v>
                        </o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <n />
                            <o>
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">5L</v>
                            </o>
                            <o>
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">6L</v>
                            </o>
                            <o>
                              <v n="Operand">""</v>
                              <n n="Type" />
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">7L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">true</v>
                          <v n="Extensible">false</v>
                        </o>
                        <n n="InputFlags" />
                        <l2 n="InputItems" cet="BoxTreeOperand">
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"'main.exe'"</v>
                              <v n="Type">"STRING(INT#8)"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">9L</v>
                            </o>
                            <v n="Id">8L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"CONCAT(CONST.PROJECT_DIR,'Scripts\7. SP report\main.exe')"</v>
                              <v n="Type">"STRING(255)"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">11L</v>
                            </o>
                            <v n="Id">10L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"CONCAT(CONST.PROJECT_DIR,'Scripts\7. SP report\')"</v>
                              <v n="Type">"STRING(255)"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">13L</v>
                            </o>
                            <v n="Id">12L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"GV.stReport.bCreate_SPReport"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">15L</v>
                            </o>
                            <v n="Id">14L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"GV.stRX_Python.stSP_BatchReport.bBusy"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">17L</v>
                            </o>
                            <v n="Id">16L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"GV.stRX_Python.stSP_BatchReport.bDone"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">19L</v>
                            </o>
                            <v n="Id">18L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"GV.stRX_Python.stSP_BatchReport.bError"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">21L</v>
                            </o>
                            <v n="Id">20L</v>
                          </o>
                          <o>
                            <o n="Operand" t="Operand">
                              <v n="Operand">"GV.stRX_Python.stSP_BatchReport.sError"</v>
                              <v n="Type">"STRING(255)"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">0</v>
                                <v n="Fixed">false</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">false</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">23L</v>
                            </o>
                            <v n="Id">22L</v>
                          </o>
                        </l2>
                        <o n="InputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>i_sScriptName</v>
                            <v>i_sScriptPath</v>
                            <v>i_sScriptDir</v>
                            <v>i_bStart</v>
                            <v>iq_bScriptBusy</v>
                            <v>iq_bScriptDone</v>
                            <v>iq_bScriptError</v>
                            <v>iq_sScriptError</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>STRING</v>
                            <v>STRING</v>
                            <v>STRING</v>
                            <v>BOOL</v>
                            <v>BOOL[REF]</v>
                            <v>BOOL[REF]</v>
                            <v>BOOL[REF]</v>
                            <v>STRING[REF]</v>
                          </l2>
                        </o>
                        <o n="OutputParam" t="ParamList">
                          <l2 n="Names" cet="String">
                            <v>q_bBusy</v>
                            <v>q_bError</v>
                            <v>q_bDone</v>
                            <v>q_sStatus</v>
                          </l2>
                          <l2 n="Types" cet="String">
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>BOOL</v>
                            <v>STRING</v>
                          </l2>
                        </o>
                        <v n="CallType" t="Operator">FunctionBlock</v>
                        <v n="EN">false</v>
                        <v n="ENO">false</v>
                        <n n="STSnippet" />
                        <v n="ContainsExtensibleInputs">false</v>
                        <v n="ProvidesSTSnippet">false</v>
                        <v n="Id">4L</v>
                      </o>
                    </l2>
                    <l2 n="Connectors" />
                    <v n="Id">2L</v>
                  </o>
                  <o>
                    <v n="ILActive">false</v>
                    <v n="FBDValid">false</v>
                    <v n="ILValid">false</v>
                    <l2 n="ILLines" />
                    <v n="Comment">""</v>
                    <v n="Title">""</v>
                    <v n="Label">""</v>
                    <v n="OutCommented">false</v>
                    <l2 n="NetworkItems" cet="BoxTreeAssign">
                      <o>
                        <o n="OutputItems" t="OutputItemList">
                          <l2 n="OutputItems" cet="Operand">
                            <o>
                              <v n="Operand">"GV.stReport.bCreate_SPReport"</v>
                              <v n="Type">"BOOL"</v>
                              <v n="Comment">""</v>
                              <v n="SymbolComment">""</v>
                              <v n="Address">""</v>
                              <o n="Flags" t="Flags">
                                <v n="Flags">3</v>
                                <v n="Fixed">true</v>
                                <v n="Extensible">false</v>
                              </o>
                              <v n="LValue">true</v>
                              <v n="Boolean">false</v>
                              <v n="IsInstance">false</v>
                              <v n="Id">26L</v>
                            </o>
                          </l2>
                        </o>
                        <o n="Flags" t="Flags">
                          <v n="Flags">0</v>
                          <v n="Fixed">false</v>
                          <v n="Extensible">false</v>
                        </o>
                        <o n="RValue" t="BoxTreeOperand">
                          <o n="Operand" t="Operand">
                            <v n="Operand">"TRUE"</v>
                            <v n="Type">"BOOL"</v>
                            <v n="Comment">""</v>
                            <v n="SymbolComment">""</v>
                            <v n="Address">""</v>
                            <o n="Flags" t="Flags">
                              <v n="Flags">0</v>
                              <v n="Fixed">false</v>
                              <v n="Extensible">false</v>
                            </o>
                            <v n="LValue">false</v>
                            <v n="Boolean">false</v>
                            <v n="IsInstance">false</v>
                            <v n="Id">25L</v>
                          </o>
                          <v n="Id">24L</v>
                        </o>
                        <v n="Id">27L</v>
                      </o>
                    </l2>
                    <l2 n="Connectors" />
                    <v n="Id">1L</v>
                  </o>
                </l2>
                <v n="BranchCounter">0</v>
                <v n="ValidIds">true</v>
              </o>
            </Data>
            <TypeList>
              <Type n="Boolean">System.Boolean</Type>
              <Type n="BoxTreeAssign">{9873c309-1f09-4ebf-9078-42d8057ef11b}</Type>
              <Type n="BoxTreeBox">{acfc6f68-8e3a-4af5-bf81-3dd512095a46}</Type>
              <Type n="BoxTreeOperand">{9de7f100-1b87-424c-a62e-45b0cfc85ed2}</Type>
              <Type n="Flags">{668066f2-6069-46b3-8962-8db8d13d7db2}</Type>
              <Type n="Int32">System.Int32</Type>
              <Type n="Int64">System.Int64</Type>
              <Type n="Network">{d9a99d73-b633-47db-b876-a752acb25871}</Type>
              <Type n="NWLImplementationObject">{25e509de-33d4-4447-93f8-c9e4ea381c8b}</Type>
              <Type n="Operand">{c9b2f165-48a2-4a45-8326-3952d8a3d708}</Type>
              <Type n="Operator">{bffb3c53-f105-4e85-aba2-e30df579d75f}</Type>
              <Type n="OutputItemList">{f40d3e09-c02c-4522-a88c-dac23558cfc4}</Type>
              <Type n="ParamList">{71496971-9e0c-4677-a832-b9583b571130}</Type>
              <Type n="String">System.String</Type>
            </TypeList>
          </XmlArchive>
        </NWL>
      </Implementation>
    </Action>
    <LineIds Name="P3_06_SP_CreateReport">
      <LineId Id="93" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="113" Count="1" />
      <LineId Id="112" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="18" Count="13" />
      <LineId Id="40" Count="11" />
      <LineId Id="91" Count="0" />
      <LineId Id="95" Count="0" />
      <LineId Id="98" Count="0" />
      <LineId Id="100" Count="0" />
      <LineId Id="99" Count="0" />
      <LineId Id="96" Count="0" />
      <LineId Id="17" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>